force-app/main/default/objects/Member_Fee__c/Member_Fee__c.object-meta.xml
<CustomObject>
    <label>Member Fee</label>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Member Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>