force-app/main/default/objects/Member_Fee__c/fields/Date_paid__c.field-meta.xml
<CustomField>
    <fullName>Date_paid__c</fullName>
    <label>Date paid</label>
    <type>Date</type>
</CustomField>