force-app/main/default/objects/Member_Fee__c/fields/Next_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Bill_Date__c</fullName>
    <label>Next Bill Date</label>
    <type>Date</type>
</CustomField>